--- a/begin_table_centering_begin_tabular__1.tex
+++ b/begin_table_centering_begin_tabular__1.tex
@@ -3,38 +3,37 @@
 \centering
 \begin{tabular}{llllll}
 \toprule
-{} & ams & osl &              7 &      8 &        9 \\
+{} & ams-ge-discovery-fspgr &          osl-ge-signa-fspgr & mun-ph-achieva-mprage & leu-ph-achieva-t1w & mil-ph-intera-mprage \\
 \midrule
-TR                    &                   8.21 &               7.80 &                                  9 &                    8.21 &                        6.99 \\
-TE                    &                   3.22 &               2.90 &                               4.00 &                    3.81 &                        3.16 \\
-Strength              &                      3 &                  3 &                                  3 &                       3 &                           3 \\
-TI                    &                    450 &                450 &                                  0 &                       0 &                         900 \\
-FlipAngle             &                     12 &                 12 &                                  8 &                       8 &                           9 \\
-Make                  &                     GE &                 GE &                                 Ph &                      Ph &                          Ph \\
-Voxel Size            &                  1x1x1 &              1x1x1 &                              1x1x1 &                   1x1x1 &                       1x1x1 \\
-Distortion Correction &                      0 &                  0 &                                  Y &                       Y &                           Y \\
-Parallel Imaging      &                      0 &                  0 &                      2(RL) 1.5(AP) &                SENSE, 2 &                           - \\
-FOV                   &                      0 &                  0 &  240-240-170 &  240x240x160  &  256, 256, 204 \\
-Read Out Direction    &                      0 &                  0 &                                 AP &                       0 &                          FH \\
-Head coil \# channels  &                      0 &                  0 &                                 16 &                      32 &                           8 \\
-Model                 &              Discovery &         Signa HDxt &                            Achieva &              Achieva TX &                      Intera \\
-OS                    &                      0 &                  0 &                            3.2.3.2 &                   5.1.7 &                       3.2.3 \\
-Acq. Time (min)       &               00:00:00 &           00:00:00 &                           05:55 &                00:00:00 &                    08:30 \\
-orientation           &                      0 &                  0 &                                sag &                     sag &                         sag \\
-\midrule
-Amyg L                &                   1.00 &               0.89 &                               0.40 &                    0.87 &                        0.97 \\
-Amyg R                &                   1.00 &               0.81 &                               0.96 &                    0.94 &                        0.96 \\
-Caud L                &                   1.00 &               0.98 &                               0.99 &                    0.98 &                        0.99 \\
-Caud R                &                   0.74 &               0.97 &                               0.98 &                    0.97 &                        0.96 \\
-GMV                   &                   0.51 &               1.00 &                               0.99 &                    0.99 &                        1.00 \\
-Hipp L                &                   1.00 &               0.97 &                               0.77 &                    0.90 &                        0.99 \\
-Hipp R                &                   0.67 &               0.96 &                               0.97 &                    0.96 &                        0.98 \\
-LV L                  &                   0.83 &               1.00 &                               1.00 &                    1.00 &                        1.00 \\
-LV R                  &                   0.96 &               1.00 &                               1.00 &                    1.00 &                        1.00 \\
-Thal L                &                   0.95 &               0.76 &                               0.94 &                    0.78 &                        0.89 \\
-Thal R                &                   0.97 &               0.88 &                               0.97 &                    0.97 &                        0.97 \\
-cWMV                  &                   1.00 &               0.99 &                               1.00 &                    1.00 &                        1.00 \\
-scGMV                 &                   0.90 &               0.99 &                               0.96 &                    0.99 &                        0.99 \\
+TR                    &                   8.21 &                        7.80 &                     9 &               8.21 &                 6.99 \\
+TE                    &                   3.22 &                        2.90 &                  4.00 &               3.81 &                 3.16 \\
+Strength              &                      3 &                           3 &                     3 &                  3 &                    3 \\
+TI                    &                    450 &                         450 &                  1000 &            1016.30 &                  900 \\
+Flip Angle            &                     12 &                          12 &                     8 &                  8 &                    9 \\
+Make                  &                     GE &                          GE &                    Ph &                 Ph &                   Ph \\
+Voxel Size            &                  1x1x1 &                     1x1x1.2 &                 1x1x1 &              1x1x1 &                1x1x1 \\
+Distortion Correction &                      0 &                           Y &                     Y &                  Y &                    Y \\
+Parallel Imaging      &                      0 &                           2 &                     3 &                  2 &                    - \\
+FOV                   &                      0 &                 256x256x166 &           240x240x170 &        240x240x160 &          256x256x204 \\
+Read Out Direction    &                      0 &                          FH &                    AP &                 FH &                   FH \\
+Head coil \# channels  &                      0 &                           8 &                    16 &                 32 &                    8 \\
+Model                 &              Discovery &                  Signa HDxt &               Achieva &         Achieva TX &               Intera \\
+OS                    &                      0 &            HD23.0\_V01\_1210a &               3.2.3.2 &              5.1.7 &                3.2.3 \\
+Acq. Time (min)       &               00:00:00 &  1900-01-01 07:06:54.144000 &              05:55:00 &           05:38:00 &             08:30:00 \\
+orientation           &               00:00:00 &                         sag &                   sag &                sag &                  sag \\
+Amyg (L)              &                   0.67 &                        0.89 &                  0.66 &               0.85 &                 0.97 \\
+Amyg (R)              &                   0.88 &                        0.79 &                  0.91 &               0.94 &                 0.94 \\
+Caud (L)              &                   0.96 &                        0.98 &                  0.98 &               0.97 &                 0.98 \\
+Caud (R)              &                   0.95 &                        0.96 &                  0.98 &               0.93 &                 0.96 \\
+GMV                   &                   1.00 &                        0.99 &                  0.99 &               0.98 &                 0.99 \\
+Hipp (L)              &                   0.51 &                        0.97 &                  0.83 &               0.90 &                 0.99 \\
+Hipp (R)              &                   0.95 &                        0.96 &                  0.93 &               0.96 &                 0.99 \\
+Thal (L)              &                   0.97 &                        0.81 &                  0.94 &               0.80 &                 0.88 \\
+Thal (R)              &                   0.70 &                        0.87 &                  0.96 &               0.96 &                 0.97 \\
+cVol                  &                   0.99 &                        0.99 &                  0.98 &               0.98 &                 0.99 \\
+cWMV                  &                   1.00 &                        0.99 &                  1.00 &               1.00 &                 1.00 \\
+eTIV                  &                   1.00 &                        1.00 &                  1.00 &               0.92 &                 0.99 \\
+scGMV                 &                   0.98 &                        0.99 &                  0.96 &               0.98 &                 0.99 \\
 \bottomrule
 \end{tabular}
 
