--- a/begin_table_centering_begin_tabular__2.tex
+++ b/begin_table_centering_begin_tabular__2.tex
@@ -3,38 +3,37 @@
 \centering
 \begin{tabular}{lllllll}
 \toprule
-{} & 10 & 11 & 12 & 13 & 14 & hvn \\
+{} & bas-si-prisma-mprage & par-si-prisma-mprage & sf-si-skyra-mprage & bwh-si-skyra-mprage & bas-si-skyra-mprage & hvn-si-skyra-mprage \\
 \midrule
 TR                    &                 2300 &                 2300 &               2300 &                2300 &                2300 &                2000 \\
 TE                    &                 2.96 &                 2.98 &               2.98 &                2.96 &                2.96 &                3.22 \\
 Strength              &                    3 &                    3 &                  3 &                   3 &                   3 &                   3 \\
 TI                    &                  900 &                  900 &                900 &                 900 &                 900 &                 900 \\
-FlipAngle             &                    9 &                    9 &                  9 &                   9 &                   9 &                   8 \\
+Flip Angle            &                    9 &                    9 &                  9 &                   9 &                   9 &                   8 \\
 Make                  &                   Si &                   Si &                 Si &                  Si &                  Si &                  Si \\
 Voxel Size            &                1x1x1 &              1x1x1.1 &              1x1x1 &               1x1x1 &               1x1x1 &               1x1x1 \\
-Distortion Correction &                    Y &                    N &                  N &                   Y &                   Y &                   0 \\
-Parallel Imaging      &                    2 &                    - &                  2 &                   2 &                   2 &                   0 \\
-FOV                   &              256x256 &                250mm &              256mm &        24 x 25.6 cm &             256x256 &                   0 \\
-Read Out Direction    &                   HF &                    0 &                 AP &                  SI &                  HF &                   0 \\
-Head coil \# channels  &                   20 &                    0 &                 20 &                  20 &                  20 &                   0 \\
+Distortion Correction &                    Y &                    N &                  Y &                   Y &                   Y &                   N \\
+Parallel Imaging      &                    2 &                    - &                  2 &                   2 &                   2 &                   2 \\
+FOV                   &          256x256x176 &          240x256x176 &        240x256x176 &         240x276x156 &         256x256x176 &         256x208x160 \\
+Read Out Direction    &                   HF &                   RL &                 HF &                  HF &                  HF &                  RL \\
+Head coil \# channels  &                   20 &                   32 &                 20 &                  20 &                  20 &                  32 \\
 Model                 &               Prisma &           Prisma fit &              Skyra &               Skyra &               Skyra &               Skyra \\
-OS                    &                 D13D &        syngo MR D13D &       syngo MR D13 &                 D13 &          D13C (SP2) &                   0 \\
-Acq. Time (min)       &             05:09 &             07:46 &           05:12 &            05:12 &            05:09 &            00:00:00 \\
-orientation           &                  sag &                  sag &                sag &                 sag &                 sag &                   0 \\
-\midrule
-Amyg L                &                 0.84 &                 0.86 &               0.78 &                0.85 &                0.98 &                0.89 \\
-Amyg R                &                 0.93 &                 0.90 &               0.91 &                0.86 &                0.93 &                0.84 \\
-Caud L                &                 0.99 &                 0.99 &               0.99 &                0.99 &                0.99 &                0.98 \\
-Caud R                &                 0.99 &                 0.96 &               0.93 &                0.96 &                0.98 &                0.97 \\
-GMV                   &                 0.99 &                 0.98 &               0.98 &                1.00 &                1.00 &                0.97 \\
-Hipp L                &                 0.94 &                 0.98 &               0.98 &                0.97 &                0.97 &                0.98 \\
-Hipp R                &                 0.93 &                 0.95 &               0.97 &                0.99 &                0.96 &                0.96 \\
-LV L                  &                 1.00 &                 1.00 &               1.00 &                1.00 &                1.00 &                1.00 \\
-LV R                  &                 1.00 &                 1.00 &               1.00 &                1.00 &                1.00 &                1.00 \\
-Thal L                &                 0.94 &                 0.87 &               0.84 &                0.81 &                0.89 &                0.89 \\
-Thal R                &                 0.84 &                 0.93 &               0.86 &                0.91 &                0.92 &                0.89 \\
+OS                    &                 D13D &                VD13D &               VD13 &                VD13 &               VD13C &                VD13 \\
+Acq. Time (min)       &             05:09:00 &             07:46:00 &           05:12:00 &            05:12:00 &            05:09:00 &            04:56:00 \\
+orientation           &                  sag &                  sag &                sag &                 sag &                 sag &                  ax \\
+Amyg (L)              &                 0.83 &                 0.89 &               0.80 &                0.85 &                0.98 &                0.89 \\
+Amyg (R)              &                 0.94 &                 0.92 &               0.93 &                0.85 &                0.93 &                0.84 \\
+Caud (L)              &                 0.99 &                 0.99 &               0.98 &                0.99 &                0.98 &                0.98 \\
+Caud (R)              &                 0.99 &                 0.96 &               0.95 &                0.95 &                0.98 &                0.97 \\
+GMV                   &                 0.99 &                 0.98 &               0.99 &                1.00 &                0.99 &                0.97 \\
+Hipp (L)              &                 0.94 &                 0.98 &               0.99 &                0.95 &                0.97 &                0.98 \\
+Hipp (R)              &                 0.91 &                 0.94 &               0.97 &                0.98 &                0.95 &                0.96 \\
+Thal (L)              &                 0.92 &                 0.87 &               0.87 &                0.76 &                0.91 &                0.89 \\
+Thal (R)              &                 0.74 &                 0.93 &               0.80 &                0.91 &                0.93 &                0.89 \\
+cVol                  &                 0.99 &                 0.98 &               0.98 &                1.00 &                0.99 &                0.96 \\
 cWMV                  &                 1.00 &                 1.00 &               1.00 &                1.00 &                1.00 &                0.97 \\
-scGMV                 &                 0.97 &                 0.99 &               0.99 &                0.98 &                0.99 &                0.99 \\
+eTIV                  &                 1.00 &                 1.00 &               1.00 &                1.00 &                1.00 &                0.97 \\
+scGMV                 &                 0.98 &                 0.99 &               0.98 &                0.98 &                0.99 &                0.99 \\
 \bottomrule
 \end{tabular}
 \caption{Top: Acquisition parameters for the first 10 out of 20 scanners. Si = Siemens, Ph = Philips, GE= General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
